--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-strap": "0.0.1",
+    "tableau-api": "^2.2.3",
+    "tableau-react-embed": "^1.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
