--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
     "react-i18next": "^11.8.15",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-strap": "0.0.1",
+    "styled-components": "^5.3.0",
     "tableau-api": "^2.2.3",
     "tableau-react-embed": "^1.1.0",
     "web-vitals": "^1.1.1"
